--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="flex">
                 <div class="video-box">
                 <video width=70% controls>
-                    <source src="./videos/csl2.mp4" type="video/mp4">
+                    <source src="./videos/CSL2.mp4" type="video/mp4">
                 </video>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                         </p>
 
                         <h4><em>"I can't live without you."</em></h4>
-                        <div class="img-bg flex">
+                        <div class="flex">
                             <div class="video-box">
                             <video width=70% controls>
                                 <source src="./videos/tn2.mp4" type="video/mp4">
@@ -350,7 +350,7 @@
 
                             <hr>
 
-                            <h3 style="color: darkgrey; margin-top: .5em; margin-bottom: .5em;">Research methods</h4>
+                            <h3 style="color: darkgrey; margin-top: .5em; margin-bottom: .5em; text-align: center;">Research methods</h4>
 
                             <div class="prose">
                                     <p style="color:darkgray; margin-top: 0; font-size: small;">The movies included in this story were chosen based on writer preferences and time of relevance. 
