--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <!-- content omg!-->
         <div class="prose">
-            <p style="padding-top: 10px;"><em>Content warning: themes of consent and sexual assualt.</em></p>
+            <p style="padding-top: 2em;"><em>Content warning: themes of consent and sexual assualt.</em></p>
             <p>The movie scene is all too familiar. A boy grabs an unsuspecting girl by the waist and leans in for a kiss. 
                 The music swells as he plants his lips on hers. They break apart, laugh, and the film ends in a cheesy wedding montage.</p>
             <p>But what if, as she slowly steps back, her face is filled with fear, not love? Not your typical rom-com scene is it?</p>
